--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button {
 @media only screen and (min-width: 481px) {
   .med-2 {
     /* if you have bigger 'screen' use  50% */
-    width: 35%; /* this % specific to my laptop */
+    width: 35%; /* this % specific to my laptop screen */
   }
 }
 
@@ -54,7 +54,7 @@ button {
 @media only screen and (min-width: 1024px) {
   .lg-1 {
     /* if you have bigger 'screen' use 25% */
-    width: 24%; /* this % specific to my laptop */
+    width: 24%; /* this % specific to my laptop screen */
   }
   .lg-3 {
     width: 75%;
